--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 requires = [
-    "setuptools>=42",
+    "meson-python",
     "pybind11>=2.10.0",
 ]
-build-backend = "setuptools.build_meta"
+build-backend = "mesonpy"
 
 
 [tool.cibuildwheel]
